mdd-backend/src/main/java/com/example/mdd_backend/errors/exceptions/DatabaseOperationException.java
package com.example.mdd_backend.errors.exceptions;

public class DatabaseOperationException extends RuntimeException {
    public DatabaseOperationException(String message) {
        super(message);
    }
}
